--- a/src/Asset/styles.css
+++ b/src/Asset/styles.css
@@ -215,3 +215,46 @@ button{
 
     margin-top: 19vh;
 }
+
+@media screen and (max-width: 550px) {
+    .game {
+        display: grid;
+
+        margin-top: 5vh;
+    }
+
+    .game .wrapper_settings {
+        grid-row: 2 / 3;
+
+        text-align: center;
+        margin-top: 3vh;
+    }
+
+    #displayCards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    #histo {
+        grid-row: 2 / 3;
+        grid-column: 1 / 3;
+    }
+
+    #buttonContainer {
+        margin-top: 2vh;
+    }
+
+    #showIdDeck img, #setup img {
+        height: 21vh;
+    }
+
+    #showIdDeck, #setup {
+        text-align: center;
+    }
+
+    #canvas {
+        width: 90vw;
+
+        top: 12vh;
+        left: unset;
+    }
+}
